Added conversion of ZX81 files P to P81, and P81 to P
Allow to save text note on a ZSF snapshot
Allow to load and save AY Player playlist
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer
Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving

Improved Sinclair QL emulation:
- Allow to increase Sinclair QL RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector

Improved ZX Vision:
- Allow to hide minimized windows
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default

Improved Debug CPU:
- Show view number inside the window and not in the window title
- Add option to enable/disable all breakpoints

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes:
- Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors
- Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
- Simulate data sound on read and write
- Visual Microdrive: Allow to see a microdrive cartridge in action

Added Visual Cassette Tape window
Added LEC memory extension emulation
Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus