@@ -645,7 +645,7 @@ extern void menu_first_aid_init(void);
 extern void menu_first_aid_random_startup(void);
 extern int menu_first_aid_title(char *key_setting,char *title);
 
-#define MAX_F_FUNCTIONS 64
+#define MAX_F_FUNCTIONS 66
 
 enum defined_f_function_ids {
 	//reset, hard-reset, nmi, open menu, ocr, smartload, osd keyboard, exitemulator.
@@ -672,6 +672,8 @@ enum defined_f_function_ids {
     F_FUNCION_WAVE_PIANO,
     F_FUNCION_AYMIXER,
     F_FUNCION_AYPLAYER,
+    F_FUNCION_VOLUME_DECREMENT,
+    F_FUNCION_VOLUME_INCREMENT,
     F_FUNCION_COLOUR_PALETTES,
     F_FUNCION_HEX_EDITOR,
     F_FUNCION_VIEW_SPRITES,
