@@ -12,6 +12,7 @@ Allow to load and save AY Player playlist
 Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
 Improved Mac timing by using native timer
 Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
+Added direct functions to increase/decrease Audio Volume
 
 Improved Sinclair QL emulation:
 - Allow to increase Sinclair QL RAM size
